# Deep-learning-for-biology

./: .gitignore  .pre-commit-config.yaml  README.md  numerical-representation-of-proteins.ipynb  pyproject.toml
data/kaggle/peptide-lc-retention-time-prediction/: rt_prediction_rnn_embedding.csv  test.csv  test_sample_submission.csv  train.csv
dl_biology/: __init__.py  constants.py  dataloader.py  functions.py  helper.py  model.py
dl_biology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dl_biology/cafa6/: constants.py  dataloader.py  embedding.py  helper.py  loss.py  model.py  run_embedding.sh  training.py  vanilla_models.py
kaggle-submission/retention-time-prediction/: rt_prediction_gru_embedding.csv  rt_prediction_rnn_embedding.csv
nbs/: retention-time-prediction-deeplc.ipynb  retention-time-prediction-rnn-embedding.ipynb
nbs/CAFA6/: ESM2-protein-embedding.ipynb  PART1-Creating-hidden-Embedding-with-ESM2.ipynb  PART2-training-vanilla-NN.ipynb  training-transformer.ipynb
nbs/Peptide LC retention time prediction - VIB 2024/: retention-time-prediction-linear-model.ipynb  retention-time-prediction-rnn-embedding.ipynb  retention-time-prediction-rnn.ipynb  retention-time-prediction-transformer-embedding.ipynb
nbs/numerical-rep-of-proteins/: ESM2-protein-embedding.ipynb  simple-numerical-representation-of-proteins.ipynb
scripts/: check_missing_deps.py
tests/: __init__.py  test_functions.py
